[pytest]
# By default, run with verbose on and show detail for skipped and xfail tests.
# The confcutdir argument tells pytest to load conftest.py starting from
# the unittest directory
addopts = -rsxX -v
# We need py.test >=2.5 (for yield_fixtures)
minversion = 2.5
# Don't look in these directories for tests
norecursedirs=venv* .git .hg build doc *.egg-info equipment_test tmp machines archive file_parsers

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
